--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,30 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Second</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+    <section class='top-container'>
+        <div class='box1'></div>
+        <div class='box2'></div>
+        <div class='circle'></div>
+    </section>
+
+    <section class='middle-container'>
+        <div class='box'></div>
+    </section>
+
+    <dv class='hello-friends'>
+        <h1 id="text">Hello</h1>
+        <h1>Friends</h1>
+    </dv>
+
+</body>
+
+</html>
