--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,31 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Third</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+    <header>
+        <div class="logo"></div>
+    </header>
+    <div class="some-text">
+        <p>Consider hiding the status bar- and all other app UI - while people are actively viewing full-screen media. If you
+            hide the status bar, be sure to let people retrieve it (and the appropiate app UI) with a single tap. Unless
+            you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users
+            are unlikely to discover such a gesture or to remember it.
+        </p>
+    </div>
+
+    <div class="color-box" id="box1"></div>
+    <div class="color-box" id="box2"></div>
+    <div class="color-box" id="box3"></div>
+    <div class="color-box" id="box4"></div>
+
+</body>
+
+</html>
